Clean up directory structure, READEME.md, and example

--- a/example/index.html
+++ b/example/index.html
@@ -32,10 +32,10 @@
     </section>
   </div>
 
-  <script src="../components/angular/angular.js"></script>
-  <script src="../components/angular-http-auth/src/angular-http-auth.js"></script>
-  <script src="../components/angular-mocks/angular-mocks.js"></script>
-  <script src="../src/angular-authentication.js"></script>
+  <script src="components/angular/angular.js"></script>
+  <script src="components/angular-http-auth/src/angular-http-auth.js"></script>
+  <script src="components/angular-mocks/angular-mocks.js"></script>
+  <script src="../js/angular-authentication.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
