--- a/example/index.html
+++ b/example/index.html
@@ -11,31 +11,32 @@
         <h2>Principal Information</h2>
       </header>
       <ul>
-        <li>Authenticated: {{user.isAuthenticated()}}</li>
-        <li>Username: {{user.identity().name()}}</li>
-        <li>ID: {{user.identity().id()}}</li>
+        <li>Authenticated: <span id="user-is-authenticated">{{user.isAuthenticated()}}</span></li>
+        <li>Username: <span id="user-name">{{user.identity().name()}}</span></li>
+        <li>ID: <span id="user-id">{{user.identity().id()}}</span></li>
       </ul>
     </section>
     <section ng-hide="user.isAuthenticated()">
       <fieldset>
         <legend>Sign In</legend>
-        <p ng-show="message">{{message}}</p>
+        <p id="error-message" ng-show="message">{{message}}</p>
         <ul>
           <li><label for="username">Username:</label> <input type="text" id="username" name="username" ng-model="username"></li>
           <li><label for="password">Password:</label> <input type="password" id="password" name="password" ng-model="password"></li>
-          <li><button ng-click="signinButtonClick()">Sign In</button></li>
+          <li><button id="sign-in-button" ng-click="signinButtonClick()">Sign In</button></li>
         </ul>
       </fieldset>
     </section>
-    <section ng-show="user.isAuthenticated()">
-      <button ng-click="signoutButtonClick()">Sign Out</button>
+    <section id="sign-out" ng-show="user.isAuthenticated()">
+      <button id="sign-out-button" ng-click="signoutButtonClick()">Sign Out</button>
     </section>
   </div>
 
+  <script src="components/jquery/jquery.js"></script>
   <script src="components/angular/angular.js"></script>
   <script src="components/angular-http-auth/src/angular-http-auth.js"></script>
   <script src="components/angular-mocks/angular-mocks.js"></script>
-  <script src="../js/angular-authentication.js"></script>
+  <script src="js/angular-authentication.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
